add mobile heade

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@ for Your Business"
   <body>
     <!-- Page Header -->
     <header class="page-header">
-      <div class="container">
+      <div class="container header-wraper">
         <nav class="navigation">
           <a class="logo" href="./index.html"
             >Web<span class="logo-accent">Studio</span></a
           >
+
           <ul class="navigation-list">
             <li>
               <a class="nav-link nav-link-active" href="./index.html">Studio</a>
@@ -62,20 +63,25 @@ for Your Business"
             </li>
           </ul>
         </address>
+        <button class="header-btn" type="button">
+          <svg class="header-btn-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!-- MAIN -->
-    <main>
-      <!-- Hero Section -->
-      <section class="hero-main section">
+    <!-- <main> -->
+    <!-- Hero Section -->
+    <!-- <section class="hero-main section">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="btn-hero" type="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
-      <!-- Advantages Section -->
-      <section class="advantages section">
+    <!-- Advantages Section -->
+    <!-- <section class="advantages section">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="adv-item">
@@ -133,10 +139,10 @@ for Your Business"
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!-- Our-team Section -->
-      <section class="our-team section">
+    <!-- Our-team Section -->
+    <!-- <section class="our-team section">
         <div class="container">
           <h2 class="title-second">Our Team</h2>
           <ul class="team-list">
@@ -310,10 +316,10 @@ for Your Business"
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!-- Our-portfolio Section -->
-      <section class="our-portfolio section">
+    <!-- Our-portfolio Section -->
+    <!-- <section class="our-portfolio section">
         <div class="container">
           <h2 class="title-second">Our Portfolio</h2>
           <ul class="op-list">
@@ -440,9 +446,9 @@ for Your Business"
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
     <!-- FOOTER -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-content">
         <div class="text-footer">
           <a class="logo-footer" href="./index.html"
@@ -506,10 +512,10 @@ for Your Business"
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- BACKDROP WITH MODAL -->
-    <div class="backdrop is-open">
+    <!-- <div class="backdrop is-open">
       <div class="modal">
         <button class="close-modal-btn" type="button">
           <svg class="close-modal-btn-icon" width="8" height="8">
@@ -597,6 +603,75 @@ for Your Business"
           </div>
           <button class="modal-btn" type="submit">Send</button>
         </form>
+      </div>
+    </div> -->
+
+    <!-- MODAL NAV MENU -->
+
+    <div class="mobile-menu is-open">
+      <div class="mobile-menu-container">
+        <button class="mobile-menu-close-btn" type="button">
+          <svg class="mobile-menu-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-menu-nav">
+          <ul class="mobile-navigation-list">
+            <li>
+              <a class="nav-link nav-link-active" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li>
+              <a class="nav-link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts-mobile">
+          <ul class="contacts-list">
+            <li>
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="social-icons">
+          <li class="social-icons-list">
+            <a href="#" class="social-icons-link">
+              <svg class="fill-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-list">
+            <a href="#" class="social-icons-link">
+              <svg class="fill-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-list">
+            <a href="#" class="social-icons-link">
+              <svg class="fill-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-list">
+            <a href="#" class="social-icons-link">
+              <svg class="fill-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
