add tab and descktop header

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ for Your Business"
   <!-- BODY -->
   <body>
     <!-- Page Header -->
+     
     <header class="page-header">
       <div class="container header-wraper">
         <nav class="navigation">
@@ -608,7 +609,7 @@ for Your Business"
 
     <!-- MODAL NAV MENU -->
 
-    <div class="mobile-menu is-open">
+    <div class="mobile-menu">
       <div class="mobile-menu-container">
         <button class="mobile-menu-close-btn" type="button">
           <svg class="mobile-menu-btn-icon" width="8" height="8">
