--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ for Your Business"
   <!-- BODY -->
   <body>
     <!-- Page Header -->
-     
+
     <header class="page-header">
       <div class="container header-wraper">
         <nav class="navigation">
@@ -69,17 +69,85 @@ for Your Business"
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
         </button>
+        <div class="mobile-menu">
+          <div class="mobile-menu-container">
+            <button class="mobile-menu-close-btn" type="button">
+              <svg class="mobile-menu-btn-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+            <nav class="mobile-menu-nav">
+              <ul class="mobile-navigation-list">
+                <li>
+                  <a class="nav-link nav-link-active" href="./index.html"
+                    >Studio</a
+                  >
+                </li>
+                <li>
+                  <a class="nav-link" href="#">Portfolio</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="#">Contacts</a>
+                </li>
+              </ul>
+            </nav>
+            <address class="contacts-mobile">
+              <ul class="contacts-list">
+                <li>
+                  <a class="contacts-link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a class="contacts-link" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="social-icons">
+              <li class="social-icons-list">
+                <a href="#" class="social-icons-link">
+                  <svg class="fill-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-icons-list">
+                <a href="#" class="social-icons-link">
+                  <svg class="fill-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-icons-list">
+                <a href="#" class="social-icons-link">
+                  <svg class="fill-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-icons-list">
+                <a href="#" class="social-icons-link">
+                  <svg class="fill-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <!-- MAIN -->
     <!-- <main> -->
     <!-- Hero Section -->
-    <!-- <section class="hero-main section">
-        <div class="container">
-          <h1 class="title">Effective Solutions for Your Business</h1>
-          <button class="btn-hero" type="button">Order Service</button>
-        </div>
-      </section> -->
+    <section class="hero-main section">
+      <div class="container">
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button class="btn-hero" type="button">Order Service</button>
+      </div>
+    </section>
 
     <!-- Advantages Section -->
     <!-- <section class="advantages section">
@@ -609,7 +677,7 @@ for Your Business"
 
     <!-- MODAL NAV MENU -->
 
-    <div class="mobile-menu">
+    <!-- <div class="mobile-menu">
       <div class="mobile-menu-container">
         <button class="mobile-menu-close-btn" type="button">
           <svg class="mobile-menu-btn-icon" width="8" height="8">
@@ -674,6 +742,6 @@ for Your Business"
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
