add adv and our team section for media

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@ for Your Business"
     </section>
 
     <!-- Advantages Section -->
-    <!-- <section class="advantages section">
+
+    <section class="advantages section">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="adv-item">
@@ -208,10 +209,10 @@ for Your Business"
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
     <!-- Our-team Section -->
-    <!-- <section class="our-team section">
+    <section class="our-team section">
         <div class="container">
           <h2 class="title-second">Our Team</h2>
           <ul class="team-list">
@@ -223,8 +224,8 @@ for Your Business"
                 height="260"
               />
               <div class="member-info">
-                <h3 class="title-third">Mark Guerrero</h3>
-                <p class="paragraph">Product Designer</p>
+                <h3 class="team-sub">Mark Guerrero</h3>
+                <p class="team-paragraph">Product Designer</p>
                 <ul class="social-icons">
                   <li class="social-icons-list">
                     <a href="#" class="social-icons-link">
@@ -265,8 +266,8 @@ for Your Business"
                 height="260"
               />
               <div class="member-info">
-                <h3 class="title-third">Tom Ford</h3>
-                <p class="paragraph">Frontend Developer</p>
+                <h3 class="team-sub">Tom Ford</h3>
+                <p class="team-paragraph">Frontend Developer</p>
                 <ul class="social-icons">
                   <li class="social-icons-list">
                     <a href="#" class="social-icons-link">
@@ -307,8 +308,8 @@ for Your Business"
                 height="260"
               />
               <div class="member-info">
-                <h3 class="title-third">Camila Garcia</h3>
-                <p class="paragraph">Marketing</p>
+                <h3 class="team-sub">Camila Garcia</h3>
+                <p class="team-paragraph">Marketing</p>
                 <ul class="social-icons">
                   <li class="social-icons-list">
                     <a href="#" class="social-icons-link">
@@ -349,8 +350,8 @@ for Your Business"
                 height="260"
               />
               <div class="member-info">
-                <h3 class="title-third">Daniel Wilson</h3>
-                <p class="paragraph">UI Designer</p>
+                <h3 class="team-sub">Daniel Wilson</h3>
+                <p class="team-paragraph">UI Designer</p>
                 <ul class="social-icons">
                   <li class="social-icons-list">
                     <a href="#" class="social-icons-link">
@@ -385,7 +386,7 @@ for Your Business"
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
     <!-- Our-portfolio Section -->
     <!-- <section class="our-portfolio section">
