--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ for Your Business"
           <ul class="team-list">
             <li class="team-member">
               <img
-                src="./images/1.jpg"
+                src="./images/img/1web-studio-mobile/mark-min.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -260,7 +260,7 @@ for Your Business"
             </li>
             <li class="team-member">
               <img
-                src="./images/2.jpg"
+                src="./images/img/1web-studio-mobile/tom-min.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -302,7 +302,7 @@ for Your Business"
             </li>
             <li class="team-member">
               <img
-                src="./images/3.jpg"
+                src="./images/img/1web-studio-mobile/camila-min.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -344,7 +344,7 @@ for Your Business"
             </li>
             <li class="team-member">
               <img
-                src="./images/4.jpg"
+                src="./images/img/1web-studio-mobile/daniel-min.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
