add op variation

--- a/index.html
+++ b/index.html
@@ -140,18 +140,19 @@ for Your Business"
       </div>
     </header>
     <!-- MAIN -->
-    <!-- <main> -->
-    <!-- Hero Section -->
-    <section class="hero-main section">
-      <div class="container">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="btn-hero" type="button">Order Service</button>
-      </div>
-    </section>
+    <main>
+      <!-- Hero Section -->
 
-    <!-- Advantages Section -->
+      <section class="hero-main section">
+        <div class="container">
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button class="btn-hero" type="button">Order Service</button>
+        </div>
+      </section>
 
-    <section class="advantages section">
+      <!-- Advantages Section -->
+
+      <section class="advantages section">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="adv-item">
@@ -211,8 +212,9 @@ for Your Business"
         </div>
       </section>
 
-    <!-- Our-team Section -->
-    <section class="our-team section">
+      <!-- Our-team Section -->
+
+      <section class="our-team section">
         <div class="container">
           <h2 class="title-second">Our Team</h2>
           <ul class="team-list">
@@ -388,15 +390,16 @@ for Your Business"
         </div>
       </section>
 
-    <!-- Our-portfolio Section -->
-    <!-- <section class="our-portfolio section">
+      <!-- Our-portfolio Section -->
+
+      <section class="our-portfolio section">
         <div class="container">
-          <h2 class="title-second">Our Portfolio</h2>
+          <h2 class="title-second t-op">Our Portfolio</h2>
           <ul class="op-list">
             <li class="item">
               <div class="overflow-paragraph">
-                <img
-                  src="./images/banking-app.jpg"
+                <img class="portfolio-img"
+                  src="./images/img/1web-studio-mobile/bank-app-min.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -409,14 +412,14 @@ for Your Business"
               </div>
 
               <div class="op-card">
-                <h3 class="title-third">Banking App</h3>
-                <p class="paragraph">App</p>
+                <h3 class="title-op">Banking App</h3>
+                <p class="paragraph-op">App</p>
               </div>
             </li>
             <li class="item">
               <div class="overflow-paragraph">
-                <img
-                  src="./images/cashless-payment.jpg"
+                <img class="portfolio-img"
+                  src="./images/img/1web-studio-mobile/mob-pay-min.jpg"
                   alt="Cashless Payment"
                   width="360"
                   height="300"
@@ -429,14 +432,14 @@ for Your Business"
               </div>
 
               <div class="op-card">
-                <h3 class="title-third">Cashless Payment</h3>
-                <p class="paragraph">Marketing</p>
+                <h3 class="title-op">Cashless Payment</h3>
+                <p class="paragraph-op">Marketing</p>
               </div>
             </li>
             <li class="item">
               <div class="overflow-paragraph">
-                <img
-                  src="./images/meditation-app.jpg"
+                <img class="portfolio-img"
+                  src="./images/img/1web-studio-mobile/laptop-min.jpg"
                   alt="Meditation App"
                   width="360"
                   height="300"
@@ -449,14 +452,14 @@ for Your Business"
               </div>
 
               <div class="op-card">
-                <h3 class="title-third">Meditation App</h3>
-                <p class="paragraph">App</p>
+                <h3 class="title-op">Meditation App</h3>
+                <p class="paragraph-op">App</p>
               </div>
             </li>
             <li class="item">
               <div class="overflow-paragraph">
-                <img
-                  src="./images/taxi-service.jpg"
+                <img class="portfolio-img"
+                  src="./images/img/1web-studio-mobile/taxi-min.jpg"
                   alt="Taxi Service"
                   width="360"
                   height="300"
@@ -469,14 +472,14 @@ for Your Business"
               </div>
 
               <div class="op-card">
-                <h3 class="title-third">Taxi Service</h3>
-                <p class="paragraph">Marketing</p>
+                <h3 class="title-op">Taxi Service</h3>
+                <p class="paragraph-op">Marketing</p>
               </div>
             </li>
             <li class="item">
               <div class="overflow-paragraph">
-                <img
-                  src="./images/screen-illustration.jpg"
+                <img class="portfolio-img"
+                  src="./images/img/1web-studio-mobile/screen-ill-min.jpg"
                   alt="Screen Illustration"
                   width="360"
                   height="300"
@@ -489,14 +492,14 @@ for Your Business"
               </div>
 
               <div class="op-card">
-                <h3 class="title-third">Screen Illustrations</h3>
-                <p class="paragraph">Design</p>
+                <h3 class="title-op">Screen Illustrations</h3>
+                <p class="paragraph-op">Design</p>
               </div>
             </li>
             <li class="item">
               <div class="overflow-paragraph">
-                <img
-                  src="./images/online-courses.jpg"
+                <img class="portfolio-img"
+                  src="./images/img/1web-studio-mobile/courses-min.jpg"
                   alt="Online Courses"
                   width="360"
                   height="300"
@@ -509,14 +512,14 @@ for Your Business"
               </div>
 
               <div class="op-card">
-                <h3 class="title-third">Online Courses</h3>
-                <p class="paragraph">Marketing</p>
+                <h3 class="title-op">Online Courses</h3>
+                <p class="paragraph-op">Marketing</p>
               </div>
             </li>
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
     <!-- FOOTER -->
     <!-- <footer class="footer">
       <div class="container footer-content">
