--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@ for Your Business"
           <ul class="team-list">
             <li class="team-member">
               <img
+                srcset="
+                  ./images/img/1web-studio-mobile/mark-min.jpg 1x,
+                  ./images/img/1web-studio-mobile/mark@2x.jpg  2x
+                "
                 src="./images/img/1web-studio-mobile/mark-min.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -262,6 +266,10 @@ for Your Business"
             </li>
             <li class="team-member">
               <img
+                srcset="
+                  ./images/img/1web-studio-mobile/tom-min.jpg 1x,
+                  ./images/img/1web-studio-mobile/tom@2x.jpg  2x
+                "
                 src="./images/img/1web-studio-mobile/tom-min.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -304,6 +312,10 @@ for Your Business"
             </li>
             <li class="team-member">
               <img
+                srcset="
+                  ./images/img/1web-studio-mobile/camila-min.jpg 1x,
+                  ./images/img/1web-studio-mobile/camila@2x.jpg  2x
+                "
                 src="./images/img/1web-studio-mobile/camila-min.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -346,6 +358,10 @@ for Your Business"
             </li>
             <li class="team-member">
               <img
+                srcset="
+                  ./images/img/1web-studio-mobile/daniel-min.jpg 1x,
+                  ./images/img/1web-studio-mobile/daniel@2x.jpg  2x
+                "
                 src="./images/img/1web-studio-mobile/daniel-min.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -398,12 +414,31 @@ for Your Business"
           <ul class="op-list">
             <li class="item">
               <div class="overflow-paragraph">
-                <img class="portfolio-img"
-                  src="./images/img/1web-studio-mobile/bank-app-min.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img/3web-studio-desk/img-4-min.jpg    1x,
+                      ./images/img/3web-studio-desk/img-4-min@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img/2web-studio-tab/img-5-min.jpg    1x,
+                      ./images/img/2web-studio-tab/img-5-min@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <img
+                    class="portfolio-img"
+                    srcset="
+                      ./images/img/1web-studio-mobile/bank-app-min.jpg 1x,
+                      ./images/img/1web-studio-mobile/bank-app@2x.jpg  2x
+                    "
+                    src="./images/img/1web-studio-mobile/bank-app-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="paragraph-hiden">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -418,12 +453,31 @@ for Your Business"
             </li>
             <li class="item">
               <div class="overflow-paragraph">
-                <img class="portfolio-img"
-                  src="./images/img/1web-studio-mobile/mob-pay-min.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img/3web-studio-desk/imgm-min.jpg    1x,
+                      ./images/img/3web-studio-desk/imgm-min@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img/2web-studio-tab/img-4-min.jpg    1x,
+                      ./images/img/2web-studio-tab/img-4-min@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <img
+                    class="portfolio-img"
+                    srcset="
+                      ./images/img/1web-studio-mobile/mob-pay-min.jpg 1x,
+                      ./images/img/1web-studio-mobile/mob-pay@2x.jpg  2x
+                    "
+                    src="./images/img/1web-studio-mobile/mob-pay-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="paragraph-hiden">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -438,12 +492,31 @@ for Your Business"
             </li>
             <li class="item">
               <div class="overflow-paragraph">
-                <img class="portfolio-img"
-                  src="./images/img/1web-studio-mobile/laptop-min.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img/3web-studio-desk/img-3-min.jpg    1x,
+                      ./images/img/3web-studio-desk/img-3-min@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img/2web-studio-tab/img-3-min.jpg    1x,
+                      ./images/img/2web-studio-tab/img-3-min@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <img
+                    class="portfolio-img"
+                    srcset="
+                      ./images/img/1web-studio-mobile/laptop-min.jpg 1x,
+                      ./images/img/1web-studio-mobile/laptop@2x.jpg  2x
+                    "
+                    src="./images/img/1web-studio-mobile/laptop-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="paragraph-hiden">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -458,12 +531,31 @@ for Your Business"
             </li>
             <li class="item">
               <div class="overflow-paragraph">
-                <img class="portfolio-img"
-                  src="./images/img/1web-studio-mobile/taxi-min.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img/3web-studio-desk/img-2-min.jpg    1x,
+                      ./images/img/3web-studio-desk/img-2-min@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img/2web-studio-tab/img-2-min.jpg    1x,
+                      ./images/img/2web-studio-tab/img-2-min@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <img
+                    class="portfolio-img"
+                    srcset="
+                      ./images/img/1web-studio-mobile/taxi-min.jpg 1x,
+                      ./images/img/1web-studio-mobile/taxi@2x.jpg  2x
+                    "
+                    src="./images/img/1web-studio-mobile/taxi-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="paragraph-hiden">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -478,12 +570,31 @@ for Your Business"
             </li>
             <li class="item">
               <div class="overflow-paragraph">
-                <img class="portfolio-img"
-                  src="./images/img/1web-studio-mobile/screen-ill-min.jpg"
-                  alt="Screen Illustration"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img/3web-studio-desk/img-1-min.jpg    1x,
+                      ./images/img/3web-studio-desk/img-1-min@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img/2web-studio-tab/img-1-min.jpg 1x,
+                      ./images/img/2web-studio-tab/img@2x.jpg    2x
+                    "
+                    media="(min-width: 768px)" />
+                  <img
+                    class="portfolio-img"
+                    srcset="
+                      ./images/img/1web-studio-mobile/screen-ill-min.jpg 1x,
+                      ./images/img/1web-studio-mobile/screen-ill@2x.jpg  2x
+                    "
+                    src="./images/img/1web-studio-mobile/screen-ill-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="paragraph-hiden">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -498,12 +609,31 @@ for Your Business"
             </li>
             <li class="item">
               <div class="overflow-paragraph">
-                <img class="portfolio-img"
-                  src="./images/img/1web-studio-mobile/courses-min.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img/3web-studio-desk/img-min.jpg    1x,
+                      ./images/img/3web-studio-desk/img-min@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img/2web-studio-tab/img-min.jpg    1x,
+                      ./images/img/2web-studio-tab/imgmin@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <img
+                    class="portfolio-img"
+                    srcset="
+                      ./images/img/1web-studio-mobile/courses-min.jpg 1x,
+                      ./images/img/1web-studio-mobile/courses@2x.jpg  2x
+                    "
+                    src="./images/img/1web-studio-mobile/courses-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="paragraph-hiden">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
