finaly im finish hw butt...

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ for Your Business"
                 </li>
               </ul>
             </address>
-            <ul class="social-icons">
+            <ul class="social-icons-mobile">
               <li class="social-icons-list">
                 <a href="#" class="social-icons-link">
                   <svg class="fill-svg" width="24" height="24">
@@ -651,7 +651,7 @@ for Your Business"
       </section>
     </main>
     <!-- FOOTER -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-content">
         <div class="text-footer">
           <a class="logo-footer" href="./index.html"
@@ -715,10 +715,10 @@ for Your Business"
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- BACKDROP WITH MODAL -->
-    <!-- <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-modal-btn" type="button">
           <svg class="close-modal-btn-icon" width="8" height="8">
@@ -807,7 +807,7 @@ for Your Business"
           <button class="modal-btn" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <!-- MODAL NAV MENU -->
 
