add fany favicon

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ for Your Business"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="icon" href="./black-cat.png" type="image/png" />
   </head>
   <!-- BODY -->
   <body>
@@ -618,7 +619,7 @@ for Your Business"
                     media="(min-width: 1158px)" />
                   <source
                     srcset="
-                      ./images/img/2web-studio-tab/img-min.jpg    1x,
+                      ./images/img/2web-studio-tab/img-min.jpg   1x,
                       ./images/img/2web-studio-tab/imgmin@2x.jpg 2x
                     "
                     media="(min-width: 768px)" />
