--- a/index.html
+++ b/index.html
@@ -796,13 +796,14 @@ for Your Business"
             />
             <label class="checkbox-privacy-policy-label" for="user-privacy">
               <span class="modal-custom-checkbox">
-                <svg class="modal-checkmark" width="10" height="8">
+                <svg class="modal-checkmark" width="16" height="16">
                   <use href="./images/icons.svg#icon-checkmark"></use>
-                </svg>
-              </span>
-
-              I accept the terms and conditions of the
-              <a href="#" class="policy-terms">Privacy Policy</a>
+                </svg> </span
+              >I accept the terms and conditions of the<a
+                href="#"
+                class="policy-terms"
+                >Privacy Policy</a
+              >
             </label>
           </div>
           <button class="modal-btn" type="submit">Send</button>
